# projet_opti_ing_science

./: main.py  pyproject.toml
backend/classification/: model_classification_knn.py  model_classification_lda_rda.py  model_classification_logistique.py  model_classification_rd_forest.py  model_classification_svm.py
backend/engineering/: load_dataset.py
backend/regression/: model_regression_Kfold.py  model_regression_Lasso.py  model_regression_Rige.py
frontend/: app.py
src/backend/regression/: model_regression_Boot.py  model_regression_simple.py
