[project]
name = "projet-opti-ing-science"
version = "0.1.0"
description = "Projet Python structuré (frontend/backend/mlpipeline) avec exécution via uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
]

# ------------------------------------------------------------
# (OPTIONNEL mais recommandé) Configs d'outils - pas du packaging
# ------------------------------------------------------------

#[tool.pytest.ini_options]
#testpaths = ["tests"]
#python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["frontend", "backend", "ml_pipeline"]